Fix page height on mobile devices

--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -1,5 +1,5 @@
 #map {
-  height: calc(100vh - 60px);
+  height: calc(100dvh - 60px);
   width: 100vw;
 }
 
